' Generated by UML Generator
' Encoded: ZP0z3eCm38Ltdy9I5n2Ar9cX0hLBPqxW1ejQ904beKD_xju0hSJ8OldPxxCjLo6IZvCr47fn8tcog0s5KCVevJP5lkh1DV9aFC9TMaOjNXi6M5nOEx5ay0M81qUMIsmIvxgabKgXM0tPjfVFzJ0ozLbUucEG5Zx_UMUAox0Y9RkXoz2jK4fsGFCEfTwdt_4murjTiMlJHxu
' URL: http://www.plantuml.com/plantuml/uml/ZP0z3eCm38Ltdy9I5n2Ar9cX0hLBPqxW1ejQ904beKD_xju0hSJ8OldPxxCjLo6IZvCr47fn8tcog0s5KCVevJP5lkh1DV9aFC9TMaOjNXi6M5nOEx5ay0M81qUMIsmIvxgabKgXM0tPjfVFzJ0ozLbUucEG5Zx_UMUAox0Y9RkXoz2jK4fsGFCEfTwdt_4murjTiMlJHxu
' Generated on: 2025-08-11T15:59:48.432930600

@startuml
skinparam classAttributeIconSize 0
hide circle

class Animal {
  #name: String
  --
  +Animal(name: String)
  +speak(): void
}

class Cat {
  +Cat(name: String)
  +speak(): void
}

class Dog {
  +Dog(name: String)
  +speak(): void
}

Cat --|> Animal
Dog --|> Animal
@enduml